<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lins.scrrec.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:id="@+id/textViewRecTitle"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecTitle"
        android:id="@+id/radioGroupQuality">

        <RadioButton
            android:text="@string/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioBtnLow"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioBtnMedium"
            android:layout_weight="1"
            android:checked="true" />

        <RadioButton
            android:text="@string/high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioBtnHigh"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/choose_file"
        android:layout_height="wrap_content"
        android:id="@+id/btnRecChooseFile"
        android:contentDescription="@string/hint_choose_file"
        android:layout_width="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupQuality" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editRecPath"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupQuality"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/btnRecChooseFile"
        android:hint="@string/hint_rec_path"
        android:layout_marginTop="8dp" />

    <Button
        android:text="@string/choose_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlayerChooseFile"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/hint_choose_file"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        android:layout_marginBottom="8dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editPlayerPath"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/btnPlayerChooseFile"
        android:hint="@string/hint_player_path" />

    <Button
        android:text="@string/open_video"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlay"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <ToggleButton
        android:layout_height="128dp"
        android:layout_width="128dp"
        android:id="@+id/toggleBtnRec"
        app:layout_constraintTop_toBottomOf="@+id/editRecPath"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:background="@drawable/toggle_btn_rec"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toTopOf="@+id/editPlayerPath"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/hint_rec_btn"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
